@@ -8,3 +8,4 @@ version.number  = 0.5.3
 version.date    = 2009-03-13
 version.url     = http://hawkscope.googlecode.com/svn/trunk/dist/version/
 googlecode.url  = http://code.google.com/p/hawkscope/
+copyright.year  = 2008, 2009
